text size correction

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <!-- Navbar Start  -->
         <section>
-            <nav class="navbar top-fixed navbar-expand-lg bg-light">
+            <nav class="navbar fixed-top navbar-expand-lg bg-light mb-5">
                 <div class="container">
 
                     <a class="navbar-brand" href="#"> <img src="images/techeducare-logo.png" alt="" class="img-fluid"
@@ -75,7 +75,7 @@
         </section>
         <!-- Navbar End  -->
         <!-- Sliding Start  -->
-        <section class="container">
+        <section class="container mt-5 pt-5">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
 
                 <div class="carousel-indicators">
@@ -87,19 +87,20 @@
                         aria-label="Slide 3"></button>
                 </div>
 
-                <div class="carousel-inner">
+                <div class="carousel-inner rounded-4">
 
                     <!-- Slide-01 -->
-                    <div class="carousel-item active">
+                    <div class="carousel-item active ">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5 ">
                             <div class="d-md-flex justify-content center align-items-center flex-column ">
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
-                                <p class="py-md-3 py-0 -mdte ch-cc">Educational technology is the combined use of computer hardware,
-                                     software, and educational theory and practice to facilitate learning.</p>
+                                <p class="py-md-3 py-0 -mdte ch-cc">Educational technology is the combined use of
+                                    computer hardware,
+                                    software, and educational theory and practice to facilitate learning.</p>
                                 <a href="#" class="btn tech-anchor bg-primary text-light text-light"> Get Started</a>
                             </div>
-                         </div>
+                        </div>
                     </div>
                     <!-- Slide-02 -->
                     <div class="carousel-item active">
@@ -108,7 +109,7 @@
                             <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
                                 <p class="py-md-3 ">Educational technology is the combined use of computer hardware,
-                                     software, and educational theory and practice to facilitate learning.
+                                    software, and educational theory and practice to facilitate learning.
                                 </p>
                                 <a href="#" class="btn tech-anchor bg-primary text-light"> Get Started</a>
                             </div>
@@ -121,7 +122,7 @@
                             <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
                                 <p class="py-md-3 ">Educational technology is the combined use of computer hardware,
-                                     software, and educational theory and practice to facilitate learning.
+                                    software, and educational theory and practice to facilitate learning.
                                 </p>
                                 <a href="#" class="btn tech-anchor bg-primary text-light"> Get Started</a>
                             </div>
@@ -277,16 +278,14 @@
                     </div>
                     <div class="col-md-6 py-5 px-3 elearning-bg-info">
                         <div class="card-body">
-                            <h2 class="card-title fs-1 fw-bold pb-3">Explore The elearning
+                            <h2 class="card-title fs-1 fw-bold pb-3">Explore The E-Learning
                                 Institute</h2>
-                            <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                                majority have suffered alteration in some form, by injected humour, or
-                                randomised words which don't look even slightly believable. If you are going
-                                to use a passage of Lorem Ipsum, you need to be sure
-                                <br><br> Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                                generators on the Internet tend to repeat predefined.
+                            <p class="card-text">The concept of e-learning is not new to the education sector. However, the outbreak of COVID-19 has fuelled schools’ need to leverage the technology platforms to drive learning initiatives. There is heightened demand for schools to provide learning solutions to students using online platforms as the advantages far outweigh the demerits. In simple terms, e-learning is the act of learning or educating via digital resources.
+
+                                <br>
+                                The use of digital platforms for learning is vividly changing our education system. Traditional classroom training days are slowly coming to an end due to high-speed internet and technology advancement. The pandemic has grown the importance of e-learning globally.
                             </p>
-                            <div class="d-flex justify-content-between my-3">
+                            <div class="d-flex justify-content-between my-4">
                                 <div>
                                     <h3 class="fs-1 fw-bold">3.2K+</h3>
                                     <p class="text-muted">Online Course</p>
@@ -525,7 +524,7 @@
         <section class="container mt-5 mb-5" id="fqa">
             <div class="mb-5 text-center">
                 <h3 class="fs-1 font-bold"> Frequently Asked Questions </h3>
-                <p>Read some feedback from our Successful students who now working in some reputed Companies. </p>
+                <p>There is some important answers of questions you can get from bellow..</p>
             </div>
 
             <div class="accordion accordion-flush  w-75  ms-auto me-auto  " id="accordionFlushExample">
@@ -644,7 +643,7 @@
         <div class="mb-5 pb-5 text-center">
             <small>Holding 31, 10B-Sector 11, Utttara-North</small> <br>
             <small>Dhaka-Bangladesh</small> <br>
-            <small>Privacy Policy  |  Terms of use</small>
+            <small>Privacy Policy | Terms of use</small>
         </div>
         <div class="social-icons">
             <a href="https://www.instagram.com/?hl=en" target="_blank"><i
@@ -672,5 +671,6 @@
     <!-- Bootstrap JS Link  -->
 
 </body>
+
 
 </html>
