some text chagses in courses section

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         <section class="container mt-5 mb-3" id="courses">
             <div class="text-center">
                 <h2 class="fs-1 fw-bold">Discover Our Popular Courses</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable
-                    content of a page when looking at its layout.</p>
+                <p>There is some important courses are listed. Checkout the catagories to find more affordable and
+                    suitable course for you.</p>
             </div>
             <div class="row row-cols-md-1 row-cols-sm-1 gy-3 gx-3 d-flex justify-content-between mt-5">
                 <div class="card p-0 rounded-4" style="max-width: 540px;">
@@ -280,10 +280,18 @@
                         <div class="card-body">
                             <h2 class="card-title fs-1 fw-bold pb-3">Explore The E-Learning
                                 Institute</h2>
-                            <p class="card-text">The concept of e-learning is not new to the education sector. However, the outbreak of COVID-19 has fuelled schools’ need to leverage the technology platforms to drive learning initiatives. There is heightened demand for schools to provide learning solutions to students using online platforms as the advantages far outweigh the demerits. In simple terms, e-learning is the act of learning or educating via digital resources.
+                            <p class="card-text">The concept of e-learning is not new to the education sector. However,
+                                the outbreak of COVID-19 has fuelled schools’ need to leverage the technology platforms
+                                to drive learning initiatives. There is heightened demand for schools to provide
+                                learning solutions to students using online platforms as the advantages far outweigh the
+                                demerits. In simple terms, e-learning is the act of learning or educating via digital
+                                resources.
 
                                 <br>
-                                The use of digital platforms for learning is vividly changing our education system. Traditional classroom training days are slowly coming to an end due to high-speed internet and technology advancement. The pandemic has grown the importance of e-learning globally.
+                                The use of digital platforms for learning is vividly changing our education system.
+                                Traditional classroom training days are slowly coming to an end due to high-speed
+                                internet and technology advancement. The pandemic has grown the importance of e-learning
+                                globally.
                             </p>
                             <div class="d-flex justify-content-between my-4">
                                 <div>
@@ -318,7 +326,7 @@
         <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
         <!-- Registration Section Start  -->
         <section class="container bg-primary rounded-3 my-5 p-5 " style="height: 250px;">
-            <div class="d-md-flex justify-content-evenly align-items-center  ">
+            <div class="d-md-flex justify-content-evenly align-items-center pt-4 ">
                 <div class="text-light">
                     <h3>Ready to Join?</h3>
                     <p>Don't be late. Register now to grab your learning opportunity.</p>
@@ -591,7 +599,7 @@
                             to an HTML page rather than just presentation. It makes HTML more comprehensible by better
                             defining the different sections and layout of web pages. <br> <b>Semantic HTML</b> elements
                             are those that clearly describe their meaning in a human- and machine-readable way. Elements
-                            such as <b>header</b>, <b>main</b> , <b>article</b> and <b>article</b> are all considered
+                            such as <b>header</b>, <b>main</b> , <b>article</b> and <b>footer</b> are all considered
                             semantic because they
                             accurately describe the purpose of the element and the type of content that
                             is inside them.</div>
