--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="carousel-inner rounded-4">
 
                     <!-- Slide-01 -->
-                    <div class="carousel-item active ">
+                    <div class="carousel-item">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5 ">
                             <div class="d-md-flex justify-content center align-items-center flex-column ">
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <!-- Slide-02 -->
-                    <div class="carousel-item active">
+                    <div class="carousel-item">
                         <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
@@ -116,8 +116,8 @@
                         </div>
                     </div>
                     <!-- Slide-03 -->
-                    <div class="carousel-item active">
-                        <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-4.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
@@ -163,16 +163,16 @@
                     suitable course for you.</p>
             </div>
             <div class="row row-cols-md-1 row-cols-sm-1 gy-3 gx-3 d-flex justify-content-between mt-5">
-                <div class="card p-0 rounded-4" style="max-width: 540px;">
+                <div class="card p-0   rounded-4" style="max-width: 540px;">
                     <div class="row g-0">
-                        <div class="col-md-4 course-image ">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start  " alt="...">
+                        <div class="col-md-4 course-image">
+                            <img src="images/course/5765181.jpg" class="img-fluid rounded-4 h-100 " alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
                                 <small class="card-text ">There are many important principles within UX design, we’ve
-                                    broken them down into five main concepts...</small> <br>
+                                    broken them down into five main concepts...</small> <br> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -181,14 +181,14 @@
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 course-image">
-                            <img src="images/course/course-2.png" class="img-fluid rounded-start  " alt="...">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start h-100 " alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Javascript Basic to advanced
                                 </h5>
                                 <small class="card-text ">It is a very powerful client-side scripting language that
-                                    makes your webpage more lively and interactive.</small> <br>
+                                    makes your webpage more lively and interactive.</small> <br> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 course-image">
-                            <img src="images/course/course-4.png" class="img-fluid rounded-start  " alt="...">
+                            <img src="images/course/2352648.jpg" class="img-fluid rounded-start  " alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -229,23 +229,23 @@
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 course-image">
-                            <img src="images/course/course-5.png" class="img-fluid rounded-start  " alt="...">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Photography Basic Rules
                                 </h5>
                                 <small class="card-text ">Learning about light, exposure, color, tone... etc will help
-                                    you produce more creative,interesting, noticeable photographs</small> <br>
+                                    you produce more creative,interesting, noticeable photographs</small> <br> 
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb- p-0 " style="max-width: 540px;">
+                <div class="card mb- p-0  " style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 course-image">
-                            <img src="images/course/course-6.png" class="img-fluid rounded-start  " alt="...">
+                            <img src="images/course/5115611.jpg" class="img-fluid rounded-start h-100 " alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
