--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="carousel-inner rounded-4">
 
                     <!-- Slide-01 -->
-                    <div class="carousel-item active ">
+                    <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5 ">
                             <div class="d-md-flex justify-content center align-items-center flex-column ">
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <!-- Slide-02 -->
-                    <div class="carousel-item active">
+                    <div class="carousel-item">
                         <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <!-- Slide-03 -->
-                    <div class="carousel-item active">
+                    <div class="carousel-item">
                         <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
